# pokatto_prestige_bot

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
sample/: settings.json
src/: main.cc
src/bot/: pokatto_prestige_bot.cc  pokatto_prestige_bot.h
src/bot/pokatto_prestige/: pokatto_prestige.cc  pokatto_prestige.h
src/bot/pokatto_prestige/pokatto/: pokatto_data.cc  pokatto_data.h
src/bot/settings/: settings.cc  settings.h
src/logger/: logger.h
